# CCOM_MS_Coursework

./: .env  .gitignore  README.md  [Colab_train] pv_segm_smp_baselines.ipynb  [Colab_train]_pv_segm_smp_baselines.ipynb  [pv-data] fetch-and-EDA.ipynb  algorithms_presentation_slides.ipynb  computer_vision_deliverable.ipynb  dataset_metadata.json  env-template.txt  environment.yml  fetch-pv-datasets-ESDA.ipynb  main.blg  main.tex  prepare-STAC-assets-datasets.ipynb  pv-datasets-fetch-ESDA.ipynb  pv_segm_smp_baselines.ipynb  requirements.txt
.github/workflows/: compile_latest_pdf.yml
Data_Analysis_Tools/project1_polarization/: .gitignore  CCOM6994-implementation_plan_notes.md  README.md  asvn_political_polarization_impl.ipynb  asvn_project_political_polarization.py  benchmarks.py  config.py  ingest.py  pyproject.toml  requirements.txt  senate_analysis.duckdb.wal  visualizations.py
Data_Analysis_Tools/project1_polarization/utils/: __init__.py  ingest.py  transforms.py
assets/report/src/sections/: 1_background.tex  3_algorithms.tex  5_conclusion.tex
init_thesis_EDA_review/: [Colab_train] pv_segm_smp_baselines.ipynb  algorithms_presentation_slides.ipynb  env-template.txt  main.tex  prepare-STAC-assets-datasets.ipynb  requirements.txt
report/src/bibliography/: references.bib
report/src/sections/: 0_introduction.tex  1_background.tex  2_methodology.tex  3_algorithms.tex  4_complexity.tex  4_section.tex  6_conclusion.tex
sections/: 2_methodology.tex  4_review.tex
utils/: fetch_and_preprocess.py  st_context_processing.py  torch_datasets.py  visualizations.py
(+5 files in other folders)
