[project]
name = "senate-polarization"
version = "0.1.0"
description = "Senate voting polarization analysis using DuckDB and modern Python tooling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"duckdb~=1.4",
	"pandas>=2.2",
	"numpy>=1.26",
	"scikit-learn>=1.4",
	"plotly>=5.24",
	"dash>=2.16",
	"requests>=2.32",
	"ipywidgets>=8.1",
	"matplotlib>=3.8",
	"python-dotenv>=1.0",
	"juv>=0.4.3",
	"ipykernel>=7.0.1",
	"lxml>=6.0.2",
	"tqdm>=4.67.1",
]

[tool.uv]
index-url = "https://pypi.org/simple"
